--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pydantic[email]
 pytest
 httpx==0.28.1
 python-jose[cryptography] 
+bcrypt==4.0.1
 passlib[bcrypt]
 python-multipart
 prometheus-fastapi-instrumentator
