fix: update sqlalchemy.url to use a placeholder for environment variable loading

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,7 +1,8 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/ratingapp
+# Use a placeholder - actual connection will be loaded from environment variables
+sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/ratingapp_placeholder
 
 [loggers]
 keys = root,sqlalchemy,alembic
